# Sysdarft

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Doxyfile  README.md  README.res.md  TODO  requirements.txt  resources.txt  sysdarft_info.txt
.github/workflows/: CMake_GitHub_Action.yml  GitHub_CMake_Workflow.yml  c-cpp.yml  cmake-single-platform.yml
CMakeToolChain/: ccache_toolchain.cmake  toolchain_settings.cmake
DedicatedGPUModule/: CMakeLists.txt
DedicatedGPUModule/src/: main.cpp
cmake_modules/: Modules.md  check_program.cmake  color_the_console.cmake  dependencies_auto_install.cmake  python_venv.cmake  utests.cmake  xxd_compiler.cmake
doc/: BitAndByteOrder.xcf  ExampleADiskContentDump.xcf  Sysdarft.md  references.bib  stack.xcf
example_modules/: CMakeLists.txt  example.cpp  example_dep1.cpp  example_dep2.cpp
gui_module/: CMakeLists.txt
gui_module/resources/: index.html  main.py
gui_module/src/: backend.cpp  fallback.cpp  fallback.h  gui_module_head.h  http.cpp  input.cpp  main.cpp  shared.h  shutdown.cpp  shutdown.h  websocket_session.cpp
include/: debug.h  event_vector.h  fuse_operations.h  pygame_keys.h  res_packer.h  sysdarft_display.h  sysdarft_speaker.h  tools.h
modules/: CMakeLists.txt  example.cpp  example_dep_of_dep1.cpp
resources/frontend/: index.html
scripts/: AmberScreenEmulator.py  compile_resource_files.bash  convert.bash  convert.py  find_all_libs.sh  generate_readme.bash  generate_readme.sh  generate_resource_header.sh  pagebreak_filter.py  single_executable_builder.sh  styles.css  wrpExpect.sh
scripts/res/: README.md
src/: GlobalEvents.cpp  KeyControl.c  MainCompile.cpp  MessageMap.cpp  PreProcessingFlagChecker.cpp  ProprocessingFlagChecker.cpp  SysdarftCursesUI.cpp  SysdarftDebug.cpp  SysdarftIOHub.cpp  SysdarftMain.cpp  SysdarftMessageMap.cpp  SysdarftModule.cpp  demangle.cpp  main.cpp  sysdarft.cpp
src/SysdarftConsole/: Action.cpp  ConditionalExpression.cpp  Continue.cpp  CrowLog.cpp  CrowSendAbort.cpp  CrowShowContext.cpp  DebugAction.cpp  DebugConsole.cpp  DisassembleAnArea.cpp  IntAlertSSE.cpp  IsAPIAvailable.cpp  MainArgProcessor.cpp  MainCompile.cpp  PullData.cpp  RemoteDebugServer.cpp  SetBreakpoint.cpp  ShowBreakpoint.cpp  ShowContext.cpp  Stepi.cpp  SysdarftMain.cpp  Watcher.cpp  debugger_operand.cpp  debugger_operand.h  logo.c
src/cli/: ModuleForest.cpp  ModuleForest.h  auto_completion.cpp  cli.cpp  cli_local.h  utils.cpp
src/coding/: Assembler.cpp  DecodeInstruction.cpp  DecodeTarget.cpp  EncodeInstruction.cpp  EncodeTarget.cpp  HeadersAndDefinitions.cpp  Linker.cpp  OperandSanity.cpp  PreProcessor.cpp  zlib.c
src/config/: config.cpp
src/cpu/: OutputCurrentContext.cpp  SysdarftCPU.cpp  SysdarftCPUDecoder.cpp  SysdarftCPUInterruption.cpp  SysdarftInstructionExec.cpp  SysdarftMemory.cpp
src/cpu/Operations/: Arithmetic.cpp  ControlFlow.cpp  DataTransfer.cpp  Helper.cpp  IOH.cpp  LogicalAndBitwise.cpp  Misc.cpp
src/cpu/cpu/: output_debug_info.cpp  register.cpp
src/cpu/cpu/operations/: arithmetic.cpp  logical_and_bitwise.cpp  of_check.cpp
src/cpu/include/: cpu.inl  gpu.h  instance.h
src/debug/: debug.cpp  stack_frame_tracer.cpp  sysdarft_error.cpp
src/display/: sysdarft_display.cpp
src/evet_vec/: evet_vector.cpp
src/ext_dev/: RealTimeClock.cpp  SysdarftBlockDevices.cpp  SysdarftHardDisk.cpp
src/gui/: TerminalDisplay.cpp
src/helper/encoder/: encode.instruction.cpp  encode.target.cpp
src/include/: ASCIIKeymap.h  EncodingDecoding.h  GlobalEvents.h  InstructionSet.h  MessageMap.h  RealTimeClock.h  SysdarftCPU.h  SysdarftCPUDecoder.h  SysdarftConsole.h  SysdarftCursesUI.h  SysdarftDebug.h  SysdarftDebug.inl  SysdarftDisks.h  SysdarftDisks.inl  SysdarftGPU.h  SysdarftHardDisk.h  SysdarftIOHub.h  SysdarftInstructionExec.h  SysdarftMain.h  SysdarftMemory.h  SysdarftMessageMap.h  SysdarftModule.h  SysdarftRegister.h  TerminalDisplay.hpp  WorkerThread.h  cli.h  config.h  debug.h  debug.inl  global.h  global_event.h  instruction.h  instruction_definition.h  module.h  msg_map.h  sysdarft.h  ui_curses.h  worker.h  zlib_wrapper.h
src/include/crow/: app.h  routing.h
src/modular/: global.cpp  module.cpp  msg_map.cpp
src/res_packer/: filesystem_operations.cpp  res_packer.cpp
src/speaker/: sysdarft_speaker.cpp
src/sysdarft_processor/cpu/: initialization.cpp  instruction_executor.cpp  memory_io.cpp  operation_triggerer.cpp  output_debug_info.cpp  real_mode_target_access.cpp  register.cpp
src/sysdarft_processor/include/: cpu.h  cpu.inl  instance.h  int.h  io.h  register_def.h  vm.h
src/sysdarft_processor/instantiation/: prc_inst_n_init.cpp  processor_instances_and_their_corresponding_init.cpp
src/tools/: obtain_xxd_lib_path.cpp
src/ui/: ncurses.cpp  ui_curses.cpp
src/utils/res_packer/: filesystem_operations.cpp  res_packer.cpp
tests/: bad_example.conf  disk_io.asm  example.sysasm  example2.asm  example_module.cpp  fdaWrite.asm  file1.asm  file2.asm  good_example.conf  hda.img  int_and_port.asm  interrupt.asm  io_port.asm  preprocessor.asm  rtc.asm  sampling.sh  test.arithmetic.cpp  test.assembler.cpp  test.backend.cpp  test.cli.cpp  test.coding.cpp  test.conditional.cpp  test.config.cpp  test.controlflow.cpp  test.cpu.cpp  test.curses.cpp  test.dat_tsf.cpp  test.dataTsf.cpp  test.decode.cpp  test.decoder.cpp  test.encoder.cpp  test.error.cpp  test.execmd.cpp  test.executor.cpp  test.headProcessor.cpp  test.io.cpp  test.lgAbit.cpp  test.lnb.cpp  test.log.cpp  test.memory.cpp  (+14 more)
utests/: amber_phosphor_screen_test.cpp  cmake_sysdarft_test_case_test.cpp  get_lib_path_test.cpp  res_packer_test.cpp  sysdarft_display_test.cpp  sysdarft_sound_test.cpp
utils/: CMakeLists.txt  compress.c  keyEcho.c  lock.c  mount_project_resource.cpp  mutex.c  unlock.c
utils/Assembler/: Target.cpp  encode.instruction.cpp  encode.misc.cpp  encode.target.cpp  pre_processor.cpp
utils/examples/: example1.asm
utils/shared/: encode.target.h  instruction.h  instructions.cpp  processor.cpp
utils/tests/: test.encode.target.cpp  test.parsenum.cpp  test.processor.cpp
web/: index.html
(+6 files in other folders)
